[package]
name = "tsk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
combine = { version = "4.6.6", features = ["std"]}
crossbeam = "0.8.3"
crossterm = "0.27.0"
env_logger = "0.10.1"
log = "0.4.20"
open = "5.0.1"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
rusqlite = "0.30.0"
tui-textarea = "0.4.0"
tui-widget-list = "0.6.0"
uris = "0.1.1"
xdg = "2.5.2"
